raw/HAFIZH FAIQUNNABIL MUHAMMAD 6413 245150201111031/2024-11-14-07-41-27.ceg/compilation.txt
NT.java:10: error: method akhir in class NT cannot be applied to given types;
        output(akhir());
               ^
  required: double
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error
Not compiled
